src/test/deca/context/invalid/extension/array_allocation_memory_not_same.deca
{

	int[][] wrongTab = new int[4];
}